--- a/customer.css
+++ b/customer.css
@@ -1,8 +1,8 @@
-.text-pink-500 {
+.text-blue-500 {
 	--tw-text-opacity: 1;
 	color: #3769bf;
 }
-.hover\:text-pink-700:hover {
+.hover\:text-blue-700:hover {
  --tw-text-opacity:1;
  color:#0f58d6;
 }
